import Java-Import 0.02 from CPAN
git-cpan-module:   Java-Import
git-cpan-version:  0.02
git-cpan-authorid: RUSEKD
git-cpan-file:     authors/id/R/RU/RUSEKD/Java-Import-0.02.tar.gz

--- a/lib/Java/Design.pod
+++ b/lib/Java/Design.pod
@@ -1,3 +1,7 @@
+=head1 NAME
+
+Java::Import::Design - The design of the Java::Import Module
+
 =head1 MOTIVATIONS
 
 The original motivation for writing this module came out of a project I was working on during my previous employment.
