--- a/lib/Java/Examples.pod
+++ b/lib/Java/Examples.pod
@@ -1,12 +1,12 @@
 =head1 NAME
 
-Java::Include::Examples - Example of how to use Java::Import to call into Java classes
+Java::Import::Examples - Example of how to use Java::Import to call into Java classes
 
 =head2 Making RMI calls from Perl
 
 One nice thing about Java is the extremely straight forward manner in which it allows you to make calls to 
 remote objects residing on distant servers.  Many people use this ability as a point of integration between 
-their system and a posible third party or lagcy system.  Unfortunatly, for the most part the ability to make 
+their system and a posible third party or legacy system.  Unfortunatly, for the most part the ability to make 
 calls to these remote objects is something that only other Java applications can do without making a big 
 fuss about it.  However, we can now do this from Perl.
 
@@ -14,7 +14,7 @@ Assume that I have a RMI server from which I can get data from in the form of si
 of doing this is to use the GCJ::Cni library and natively compile and wrap a set of Java Classes which can 
 then be 'used' from my Perl script.  However, there is an easier way.
 
-Let's begin by decriping the Java interfaces that we'll be working with.  We first have the Remote Interface 
+Let's begin by descriping the Java interfaces that we'll be working with.  We first have the Remote Interface 
 that we will be interacting with:
 
   import java.rmi.*;
